--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Digital Love Letter</title>
+  <title>Digital  Letter</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="">
 </head>
@@ -12,8 +12,8 @@
     <button onclick="openLetter()">💌 Open</button>
 
     <div id="letter" class="hidden fade-in">
-      <p><h1>congratulations</h1><br><br>
-      <br>you are not yet father</p>
+      <p><h1>hpy bday</h1><br><br>
+      <br>to my best friend</p>
     </div>
   </div>
 
